toy-table-macro/tests/must-include-lifetime.stderr
error: object containing array or offset requires lifetime param (MyTable<'a>)
 --> tests/must-include-lifetime.rs:3:5
  |
3 |     MyTable {
  |     ^^^^^^^

error: only objects containing arrays or offsets require lifetime
  --> tests/must-include-lifetime.rs:13:13
   |
13 |     MyTable<'a> {
   |             ^^
